--- a/app/templates/indeed.html
+++ b/app/templates/indeed.html
@@ -142,3 +142,6 @@ else{
 }
 
 }
+01_makemigrations:
+command: "source /var/app/venv/*/bin/activate && python3 manage.py makemigrations --noinput"
+leader_only: true
